--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "method-override": "^3.0.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
