--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "react-dev-utils": "^10.0.0",
     "sequelize": "^6.19.0"
   }
 }
