--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CodeMakers-DH/grupo_2_CarMakers#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "awesome-notifications": "^3.1.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
