--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "awesome-notifications": "^3.1.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
