--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
   app:
     image: node:16
     container_name: nodeapp
-    command: npm start
+    command: npm run start
     ports:
-      - "6000:8080"
+      - "4000:4000"
     working_dir: /app
     volumes:
       - ./:/app
